<resources>
    <string name="app_name">Onyx</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit_email">Enter your e-mail address</string>
    <string name="write_password">Enter your password</string>
    <string name="edit_phone">Enter your mobile number</string>
    <string name="buttonSend">Send</string>
    <string name="buttonCancel">Cancel</string>
    <string name="invalid_signIn">Invalid e-mail or password</string>
    <string name="invalidName">Name is invalid</string>
    <string name="invalidEmail">E-mail is invalid</string>
    <string name="invalidPassword">Password is invalid</string>
    <string name="buttonVerify">Send email</string>
    <string name="buttonDelete">Delete</string>
    <string name="verifyTitle">Awaiting Email Verification</string>
    <string name="edit_Name">Enter your first name</string>
    <string name="edit_lastName">Enter your last name</string>
    <string name="default_notification_channel_id">ChannelID</string>
    <string name="fcm_message">New Contact</string>
    <string name="checkCarer">Carer</string>
    <string name="checkAssisted">Assisted Person</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="intro_message">Select a Place:</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="carerQuestion">Are you a carer?</string>
    <string name="responsePositive">Yes</string>
    <string name="responseNegative">No</string>
    <string name="add_contact_by_email">Enter the email of your new contact</string>
    <string name="add_text">Add</string>
    <string name="poi_attraction">Attractions</string>
    <string name="poi_government">Government</string>
    <string name="poi_medical">Medical</string>
    <string name="poi_park">Parks</string>
    <string name="poi_place_of_worship">Places of worship</string>
    <string name="poi_school">Schools</string>
    <string name="poi_sports_complex">Sporting complexes</string>
    <string name="poi_transit">Public transportation</string>
    <string name="toggleDescription">Please check the boxes for the items you want on your map</string>
    <string name="requestCarer">Request a Carer</string>

    <!-- video chat -->
    <string name="room_status">status</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="settings">Settings</string>
    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="pref_title_audio_codec">Audio Codec</string>
    <string name="pref_title_video_codec">Video Codec</string>
    <string name="sender_bandwidth_constraints">Set sender bandwidth constraints. Zero represents the WebRTC default value which varies by codec.</string>
    <string name="max_audio_bitrate">Max Audio Bitrate (bits per second)</string>
    <string name="max_video_bitrate">Max Video Bitrate (bits per second)</string>
    <string name="turn_speaker_on">Speaker ON</string>
    <string name="vp8_simulcast">VP8 Simulcast</string>
    <string name="annotate">Annotate</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="sos_button_name">      SOS      </string>
    <string name="disconnect">Disconnect from User</string>
    <string name="nearbyStart">Nearby</string>
    <string name="Business">Business</string>
    <string name="Apply">Apply</string>
</resources>
