<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/toggleDescriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/toggleDescription"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxAttractions"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="40dp"
        android:text="@string/poi_attraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleDescriptor" />

    <CheckBox
        android:id="@+id/checkBoxBusiness"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="274dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/Business"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTransit" />

    <CheckBox
        android:id="@+id/checkBoxGovernment"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:text="@string/poi_government"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAttractions" />

    <CheckBox
        android:id="@+id/checkBoxMedical"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:text="@string/poi_medical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxGovernment" />

    <CheckBox
        android:id="@+id/checkBoxParks"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:text="@string/poi_park"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMedical" />

    <CheckBox
        android:id="@+id/checkBoxWorship"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:text="@string/poi_place_of_worship"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxParks" />

    <CheckBox
        android:id="@+id/checkBoxSchools"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:text="@string/poi_school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWorship" />

    <CheckBox
        android:id="@+id/checkBoxSport"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:text="@string/poi_sports_complex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSchools" />

    <CheckBox
        android:id="@+id/checkBoxTransit"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:text="@string/poi_transit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSport" />

    <Button
        android:id="@+id/buttonToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="148dp"
        android:text="@string/Apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>